# QuickWebShortcuts

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  install-user.sh  install.sh  postinst
src/: CMakeLists.txt  Config.h  SearchEngine.h  SearchEngines.cpp  SearchEngines.h  plasma-runner-quickwebshortcuts.desktop  quick_web_shortcuts.cpp  quick_web_shortcuts.h  quick_web_shortcuts.json  utilities.h
src/config/: SearchEngineItem.cpp  SearchEngineItem.h  api_language_utility.h  browser_item.ui  plasma-runner-quickwebshortcuts_config.desktop  quick_web_shortcuts_config.cpp  quick_web_shortcuts_config.h  quick_web_shortcuts_config.ui  search_engine_item.ui
src/searchengines/: SearchEngine.h  SearchEngines.h
src/searchproviders/: Bing.h  DuckDuckGo.h  Google.h  RequiredData.h  SearchSuggestionData.h
